Fixed hobbies layout on mobile

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -20,7 +20,11 @@
     text-align: center;
     width: 100%;
     ul {
-        display: inline-block
+        padding-left: 0;
+        display: inline-block;
+        li {
+            list-style-type: none;
+        }
     }
 }
 
